--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src="js/jquery-3.5.0.min.js"></script>
 		<script src="js/d3-voronoi.min.js"></script>
+		<script src="js/topojson-3.0.2.js"></script>
 		<script src="js/script.js"></script>
 	</head>
 
